c4prj2_input/grade.txt
Grading at Sat 07 Oct 2023 03:22:34 AM UTC
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:65:6: error: ‘n’ undeclared (first use in this function)
   65 |     *n->hands = i;
      |      ^
input.c:65:6: note: each undeclared identifier is reported only once for each function it appears in
Compilation of input.c failed

Overall Grade: F
